# ecr_ci_script

./: .gitignore  Cargo.toml  README.md
src/: main.rs
