[package]
name = "ecr_ci_script"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
strip = true
panic = "abort"

[dependencies]
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-ecr = "1.33.0"
aws-types = "1.3.2"
base64 = "0.22.1"
colored = "2.1.0"
dotenvy = "0.15.7"
regex = "1.10.5"
tokio = { version = "1.38.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
